Fix #11, toolbar overflow image

--- a/resources/css/ext-mirror.css
+++ b/resources/css/ext-mirror.css
@@ -208,6 +208,10 @@
     padding-right: 0;
 }
 
+.x-toolbar-more-icon {
+    background-image: url('../../resources/themes/images/default/toolbar/more.gif') !important;
+}
+
 .x-btn-default-toolbar-small-icon-text-left .x-btn-icon {
     right: 0;
     left: auto;
